implementando consulta signals com paginacao