@@ -11,10 +11,10 @@ import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 
-import static java.util.Arrays.asList;
+import static br.unb.sds.gds2ephem.ephem.EphemParameters.*;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 @ExtendWith(MockitoExtension.class)
@@ -25,7 +25,7 @@ class EphemAdapterIntegrationTest {
     @BeforeEach
     void setUp() {
         final var client = new XmlRpcClientBeans();
-        ReflectionTestUtils.setField(client, "url", "https://homologacao4.sds.unb.br");
+        ReflectionTestUtils.setField(client, "url", System.getenv("ODOO_URL"));
         ephemAdapter = new EphemAdapter(client.gerarClientObject(), client.gerarClientCommon());
     }
 
@@ -34,15 +34,15 @@ class EphemAdapterIntegrationTest {
     @Disabled
     void criarSignal() {
         ReflectionTestUtils.setField(ephemAdapter, "uid", 2);
-        ReflectionTestUtils.setField(ephemAdapter, "db", "test");
-        ReflectionTestUtils.setField(ephemAdapter, "odooApiKey", "e912911d5a66b85dee0b6f04ab054cd1a2ed898f");
+        ReflectionTestUtils.setField(ephemAdapter, "db", System.getenv("ODOO_DB"));
+        ReflectionTestUtils.setField(ephemAdapter, "odooApiKey", System.getenv("ODOO_APIKEY"));
         final var dados = new HashMap<String, Object>() {{
             put("general_hazard_id", false);
             put("confidentiality", "pheoc");
             put("specific_hazard_id", 2);
             put("state_id", false);
             put("signal_type", "opening");
-            put("description", "<br><p>Reporte pelo App GDS em 24/07/2023&nbsp; as 21H de <a href=\"https://teste@gmail.com\">teste.carmine@gmail.com</a></p><table class=\"table table-bordered o_table\"><tbody><tr><td><p>Tipo de Notificação</p></td><td><p>Coletiva</p></td></tr><tr><td><p>Tipo de Ocorrência</p></td><td><p>Em Humanos</p></td></tr><tr><td><p>Quantos Envolvidos</p></td><td><p>Mais de 5</p></td></tr></tbody></table><p><br></p><p><br></p>");
+            put("description", "<br><p>Reporte pelo App GDS em 24/07/2023&nbsp; as 21H de <a href=\"https://teste@gmail.com\">teste@gmail.com</a></p><table class=\"table table-bordered o_table\"><tbody><tr><td><p>Tipo de Notificação</p></td><td><p>Coletiva</p></td></tr><tr><td><p>Tipo de Ocorrência</p></td><td><p>Em Humanos</p></td></tr><tr><td><p>Quantos Envolvidos</p></td><td><p>Mais de 5</p></td></tr></tbody></table><p><br></p><p><br></p>");
             put("report_date", LocalDate.now().format(DateTimeFormatter.ISO_DATE));
             put("incident_date", LocalDate.now().format(DateTimeFormatter.ISO_DATE));
         }};
@@ -69,16 +69,31 @@ class EphemAdapterIntegrationTest {
     @Disabled
     void deveExecutarTodasAsConsultasComSucesso() {
         ReflectionTestUtils.setField(ephemAdapter, "uid", 2);
-        ReflectionTestUtils.setField(ephemAdapter, "db", "test");
-        ReflectionTestUtils.setField(ephemAdapter, "odooApiKey", "e912911d5a66b85dee0b6f04ab054cd1a2ed898f");
+        ReflectionTestUtils.setField(ephemAdapter, "db", System.getenv("ODOO_DB"));
+        ReflectionTestUtils.setField(ephemAdapter, "odooApiKey", System.getenv("ODOO_APIKEY"));
+
         final var modelos = ephemAdapter.listarModelos("eoc_", "message");
         final var modelosCampos = ephemAdapter.listarCamposModelo("eoc.signal", "confidentiality");
         final var atributos = ephemAdapter.listarAtributosPorNomeModelo("eoc.signal");
         final var opcoesSelecaoString = ((HashMap) modelosCampos.get(0)).get("selection");
         final var opcoesSelecao = EphemUtils.converterPythonStringTupleEmList((String) opcoesSelecaoString);
-        final var registrosTags = ephemAdapter.listarRegistrosPorNomeModelo("eoc.signal.tags", asList("name"));
-        final var registrosSinals = ephemAdapter.listarRegistrosPorNomeModelo("eoc.signal", asList("id", "description", "confidentiality", "tag_ids", "general_hazard_id", "specific_hazard_id", "state_id", "signal_type", "report_date", "incident_date", "name", "message_ids"));
-        final var registrosMessage = ephemAdapter.listarRegistrosPorNomeModelo("mail.message", Collections.emptyList());
+
+        final var parametersTags = EphemParameters.builder()
+                .nomeModelo(EOC_SIGNAL_TAGS_MODEL_NAME)
+                .fields(List.of("name"))
+                .build();
+        final var registrosTags = ephemAdapter.listarRegistros(parametersTags);
+
+        final var parametersSignals = EphemParameters.builder()
+                .nomeModelo(SIGNAL_MODEL_NAME)
+                .fields(SIGNAL_DEFAULT_PARAMETERS)
+                .build();
+        final var registrosSinals = ephemAdapter.listarRegistros(parametersSignals);
+
+        final var parametersMessage = EphemParameters.builder()
+                .nomeModelo(MAIL_MESSAGE_MODEL_NAME)
+                .build();
+        final var registrosMessage = ephemAdapter.listarRegistros(parametersMessage);
 
         assertNotNull(modelos);
         assertNotNull(modelosCampos);
